--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a73d52410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f498648bf10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a73d08210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a73d08410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4986761210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4986761410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a742b4a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a742b4c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4986d15b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4986d15d50&gt;]</pre>
 </div>
 
 </div>
