--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a4d36cb90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0309aa9e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a4d649210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a4d649410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0309a56210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0309a56450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a4dbf9ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a4dbf9cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f030a009b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f030a009d90&gt;]</pre>
 </div>
 
 </div>
