--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93d8327b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faff4cca050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93d7ff11d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93d7ff13d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faff499f1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faff499f3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93d85a5a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93d85a5c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faff4f4fa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faff4f4fc10&gt;]</pre>
 </div>
 
 </div>
