--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f8d8e9490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12adfb07d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f8d605fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f8d636210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12adc922d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12adc924d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f8dbd3950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f8dbd3b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12ae23dbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12ae23ddd0&gt;]</pre>
 </div>
 
 </div>
