--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6db0024850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7ff523fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6daffe0490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6daffe0690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7ff1fc290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7ff1fc490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6db0592d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6db0592f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7ff7abb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7ff7abd90&gt;]</pre>
 </div>
 
 </div>
