--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3cb68f7f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9183ec8250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cb65da210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3cb65da410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9184199290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9184199490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cb6b8ba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3cb6b8bc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f918474ab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f918474ad50&gt;]</pre>
 </div>
 
 </div>
