--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07de2a6d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f99deb0b110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f07ddf8c110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f07ddf8c310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f99deacd190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f99deacd3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f07de529a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f07de529c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f99df080ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f99df080d10&gt;]</pre>
 </div>
 
 </div>
