--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ae773df50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f313e3c5e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ae76e2210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ae76e2450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f313e6a1fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f313e6bd210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ae7c95b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ae7c95d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f313ec69990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f313ec69b90&gt;]</pre>
 </div>
 
 </div>
