--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73189d0850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9707e6a310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7318cb5090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7318cb5290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9708425150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9708425350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7319265990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7319265b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97089ddad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97089ddcd0&gt;]</pre>
 </div>
 
 </div>
