--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faeab6e5f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1a681e550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faeab9abf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faeab9dd1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1a67c3b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1a67d2210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faeabf7b890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faeabf7ba90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1a6d73650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1a6d7eb50&gt;]</pre>
 </div>
 
 </div>
