--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc055bf1bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f475f297190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc055ef4150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc055ef4350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f475f579190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f475f579390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc056491990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc056491b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f475fb2da50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f475fb2dc50&gt;]</pre>
 </div>
 
 </div>
