--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb6c879f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a79f3c490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb6cb4ff50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb6cb83190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a79bdff50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a79c16190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb6d122850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb6d122a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a7a2061d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a7a1b1a90&gt;]</pre>
 </div>
 
 </div>
