--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb17326d890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1e1a90a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb173540350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb173540590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1e173cfd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1e1771210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb173af0b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb173af0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1e1d0e8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1e1d0ead0&gt;]</pre>
 </div>
 
 </div>
