--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b73c84690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c0669efd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b7397e190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b7397e390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c06978250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c06978450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b73f21990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b73f21b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c06f2ba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c06f2bc50&gt;]</pre>
 </div>
 
 </div>
