--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f217cc0fad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3585fb610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f217cbdc150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f217cbdc350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3588c9f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3588f6190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f217d186a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f217d186c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe358e93850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe358e93a50&gt;]</pre>
 </div>
 
 </div>
