--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3585fb610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e7c91da10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3588c9f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3588f6190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e7c8d4110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e7c8d4310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe358e93850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe358e93a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e7ce809d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e7ce80bd0&gt;]</pre>
 </div>
 
 </div>
