--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f174b1e28d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdf752e690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f174aece090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f174aece290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdf15e9f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdf161c150&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f174b4649d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f174b464bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdf1bb88d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdf1bb8ad0&gt;]</pre>
 </div>
 
 </div>
