--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57f3eec810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84c5455e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57f41c9310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57f41c9510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84c5739190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84c57393d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57f476abd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57f476add0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84c5ce6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84c5ce6d90&gt;]</pre>
 </div>
 
 </div>
