--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a8a9b0e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6c4554190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a8ac89090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a8ac89290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6c4229050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6c4229250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a8b2359d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a8b235bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6c47d5990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6c47d5b90&gt;]</pre>
 </div>
 
 </div>
