--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6c4554190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f191c250810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6c4229050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6c4229250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f18f2c1c310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f18f2c1c510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6c47d5990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6c47d5b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f18f31cac10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f18f31cae10&gt;]</pre>
 </div>
 
 </div>
